# hifive1b_bootloader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  entry.S  hifive_revb_bootloader.S  linker.ld  main.c  main_old.c
ghidra/: decomp_at_sendrecv.c  decomp_esp32_init.c  decomp_main.c  decomp_spi_transceive_one.c  main.c
old/: hifive_revb_bootloader.hex
original/: hifive_revb_bootloader  hifive_revb_bootloader.S  hifive_revb_bootloader2.S
